--- a/vue-task-tracker/docker-compose.yml
+++ b/vue-task-tracker/docker-compose.yml
@@ -2,75 +2,68 @@ version: '3.8'
 
 services:
   mongodb:
-    image: mongo:6
-    container_name: tasktracker-db
-    restart: always
+    image: mongo:latest
+    container_name: task_db
     volumes:
       - mongodb_data:/data/db
-      - ./server/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
     env_file:
       - .env.mongo
-    command: --auth
-    ports:
-      - "27017:27017"
-    healthcheck:
-      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
-      interval: 5s
-      timeout: 10s
-      retries: 5
     networks:
-      - backend-network
+      - task-network
+    restart: unless-stopped
 
   backend:
     build:
-      context: server
-      target: production
-    container_name: tasktracker-api
-    restart: always
-    depends_on:
-      mongodb:
-        condition: service_healthy
+      context: ./server
+      dockerfile: Dockerfile
+    container_name: task_backend
     env_file:
       - .env.backend
     environment:
       - NODE_ENV=production
+    depends_on:
+      - mongodb
     networks:
-      - backend-network
-      - proxy-network
+      - task-network
+    restart: unless-stopped
+
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: task_frontend
+    env_file:
+      - .env.production
+    volumes:
+      - ./public:/usr/share/nginx/html
+    networks:
+      - task-network
+    depends_on:
+      - backend
+    restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8080"]
       interval: 30s
       timeout: 10s
       retries: 3
 
-  frontend:
-    build: .
-    container_name: tasktracker-ui
-    restart: always
-    networks:
-      - proxy-network
-      - backend-network
-
-  reverse-proxy:
+  nginx:
     image: nginx:alpine
-    container_name: tasktracker-proxy
-    restart: always
+    container_name: task_proxy
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - frontend
       - backend
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-    ports:
-      - 80:80
     networks:
-      - proxy-network
+      - task-network
+    restart: unless-stopped
 
 volumes:
   mongodb_data:
 
 networks:
-  backend-network:
-    driver: bridge
-    internal: true
-  proxy-network:
+  task-network:
     driver: bridge
