--- a/vue-task-tracker/docker-compose.yml
+++ b/vue-task-tracker/docker-compose.yml
@@ -3,9 +3,18 @@ version: '3.8'
 services:
   mongodb:
     image: mongo:latest
+    ports:
+      - "27017:27017"
+    command: --bind_ip_all --auth
     container_name: task_db
+    healthcheck:
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
+      interval: 5s
+      timeout: 10s
+      retries: 5
     volumes:
       - mongodb_data:/data/db
+      - ./server/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
     env_file:
       - .env.mongo
     networks:
@@ -22,10 +31,13 @@ services:
     environment:
       - NODE_ENV=production
     depends_on:
-      - mongodb
+      mongodb:
+        condition: service_healthy
     networks:
       - task-network
     restart: unless-stopped
+    volumes:
+      - ./server:/app
 
   frontend:
     build:
@@ -35,17 +47,17 @@ services:
     env_file:
       - .env.production
     volumes:
-      - ./public:/usr/share/nginx/html
+      - ./dist:/usr/share/nginx/html
+    ports:
+      - 8080:80
     networks:
       - task-network
-    depends_on:
-      - backend
+    # depends_on:
+    #   - backend
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080"]
+      test: ["CMD", "curl", "-f", "http://localhost:80"]
       interval: 30s
-      timeout: 10s
-      retries: 3
 
   nginx:
     image: nginx:alpine
@@ -56,7 +68,7 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - frontend
-      - backend
+      # - backend
     networks:
       - task-network
     restart: unless-stopped
