--- a/vue-task-tracker/nginx.conf
+++ b/vue-task-tracker/nginx.conf
@@ -1,30 +1,20 @@
+
 server {
     listen 80;
     server_name localhost;
-    
+    root /usr/share/nginx/html;
+    index index.html index.htm;
     # Increase header buffer sizes to prevent 400 errors
     client_header_buffer_size 16k;
     large_client_header_buffers 4 32k;
 
     location / {
-        root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
-        expires 1d;
-        add_header Cache-Control "public, no-transform";
     }
 
     location = /favicon.ico {
         alias /usr/share/nginx/html/favicon.ico;
         expires max;
         add_header Cache-Control "public, no-transform";
-        access_log off;
     }
-
-    location /api {
-        proxy_pass http://backend:3000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
+}   
