--- a/vue-task-tracker/Dockerfile
+++ b/vue-task-tracker/Dockerfile
@@ -1,19 +1,13 @@
 # Stage 1: Build application
-FROM node:18-alpine as builder
+FROM node:18-alpine as build
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run build && \
-    ls -la /app/dist && \
-    [ -f /app/dist/index.html ] || (echo "Missing index.html" && exit 1)
+RUN npm run build
 
 # Stage 2: Production server
-FROM nginx:stable-alpine as production-stage
-COPY --from=builder /app/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-RUN chown -R nginx:nginx /usr/share/nginx/html && \
-    find /usr/share/nginx/html -type d -exec chmod 755 {} \; && \
-    find /usr/share/nginx/html -type f -exec chmod 644 {} \;
+FROM nginx:alpine
+COPY --from=build /app/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
