--- a/vue-task-tracker/docker-compose.yml
+++ b/vue-task-tracker/docker-compose.yml
@@ -1,81 +1,64 @@
 version: '3.8'
 
 services:
+  python-server:
+    build: ./server
+    ports:
+      - "8000:8000"
+    environment:
+      MONGODB_URL: mongodb://root:example@mongodb:27017/taskdb?authSource=admin
+    depends_on:
+      - mongodb
+    networks:
+      - task-network
+
   mongodb:
     image: mongo:latest
     ports:
       - "27017:27017"
-    command: --bind_ip_all --auth
-    container_name: task_db
+    volumes:
+      - mongodb_data:/data/db
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+    networks:
+      - task-network
     healthcheck:
       test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
       interval: 5s
       timeout: 10s
       retries: 5
-    volumes:
-      - mongodb_data:/data/db
-      - ./server/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
-    env_file:
-      - .env.mongo
-    networks:
-      - task-network
-    restart: unless-stopped
-
-  backend:
-    build:
-      context: ./server
-      dockerfile: Dockerfile
-    container_name: task_backend
-    env_file:
-      - .env.backend
-    environment:
-      - NODE_ENV=production
-    depends_on:
-      mongodb:
-        condition: service_healthy
-    networks:
-      - task-network
-    restart: unless-stopped
-    volumes:
-      - ./server:/app
 
   frontend:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: task_frontend
-    env_file:
-      - .env.production
+    ports:
+      - "8080:80"
     volumes:
       - ./dist:/usr/share/nginx/html
-    ports:
-      - 8080:80
+    depends_on:
+      - python-server
     networks:
       - task-network
-    # depends_on:
-    #   - backend
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:80"]
-      interval: 30s
 
   nginx:
     image: nginx:alpine
-    container_name: task_proxy
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./dist:/usr/share/nginx/html
     depends_on:
       - frontend
-      # - backend
+      - python-server
     networks:
       - task-network
-    restart: unless-stopped
-
-volumes:
-  mongodb_data:
 
 networks:
   task-network:
     driver: bridge
+
+volumes:
+  mongodb_data:
