--- a/vue-task-tracker/server/Dockerfile
+++ b/vue-task-tracker/server/Dockerfile
@@ -1,32 +1,10 @@
-# Development stage
-FROM node:18-alpine as development
-WORKDIR /app
-COPY package*.json ./
-RUN npm install
-COPY . .
-CMD ["npm", "run", "start:dev"]
+FROM python:3.9-slim
 
-# Production stage
-FROM node:18-alpine as production
 WORKDIR /app
-COPY package*.json ./
-RUN npm install --only=production
-COPY . .
-COPY --from=development /app/dist ./dist
-CMD ["node", "dist/main"]
-FROM node:20.15.0-alpine AS builder
-WORKDIR /app
-COPY package*.json ./
-RUN npm install --include=dev --legacy-peer-deps
-COPY . .
-RUN npm run build
 
-FROM node:20.15.0-alpine
-WORKDIR /app
-COPY package*.json ./
-RUN npm install --production --legacy-peer-deps
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/.env* ./
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-EXPOSE 3001
-CMD ["node", "dist/main.js"]
+COPY . .
+
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
